	  fixes (GitHub #53) (MOREGAN, MITHALDU)
	- automation of README.md generation for git (GitHub #86) (COWENS)
	- various small documentation fixes (Github #96) (MOREGAN)

1.218 Sat 16 Aug 2014
	Summary:
	- Fixes for various parsing and documentation bugs
	- 1MB limit on input document size removed
	- Moved repository to GitHub: https://github.com/adamkennedy/PPI

	Details:
	- Prevent 'use' and 'no' package names from being parsed as
	  operators (MOREGAN)
	- Prevent sub names like 'v10' from being parsed as version
	  strings (RT #74527, GitHub #65) (JAE, MOREGAN)
	- Prevent package names like 'v10' from being parsed as version
	  strings (GitHub #76) (MOREGAN)
	- Prevent package names like 'x' from being parsed as operators
	  (GitHub #75) (MOREGAN)
	- Support Perl 5.12 "package NAMESPACE VERSION BLOCK" syntax
	  (RT #67831, GitHub #70) (BDFOY, MOREGAN)
	- Stop directing bugs to rt.cpan.org (GitHub #40) (MOREGAN)
	- Fix documentation reference to List::Util (RT #75308) (RWSTAUNER)
	- Improve scalability of parsing long lines, and remove the size
	  limit on documents PPI will parse (GitHub #5) (MITHALDU)
	- Speed up adding an element to an unlabeled statement.
	  Allow inlining of some methods. (WOLFSAGE)
	- Expanded test coverage (DOLMEN, MOREGAN)
	- Convert inline tests to standalone tests (GitHub #12) (MOREGAN)
	- Fix for '1=>x' being parsed as x operator (GitHub #46) (MOREGAN)
	- Recognize that '1 x3' is the x operator followed by a 3
	  (RT #37892, GitHub #27) (MOREGAN)
	- Support all augmented assignment operators (<<=, ||=, etc.)
	  (RT #68176, 71705) (MOREGAN)
	- Stop upper-case "=CUT" from terminating POD (RT #75039) (JAE)
	- Support upper-case digits in hex and binary numbers, including
	  in the leading '0X' and '0B'. (RT #36540) (KRYDE, MOREGAN)
	- Fix float argument to range operator misparsed as version
	  string (RT #45014) (MOREGAN)
	- Fix POD markup in PPI::Find (RT #51693) (FWIE)
	- Fix spelling of "Tom Christiansen" (RT #67264) (TADMC)